; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_dtrace_ptss.c_dtrace_ptss_fork.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_dtrace_ptss.c_dtrace_ptss_fork.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.proc = type { %struct.dtrace_ptss_page*, i32, i32 }
%struct.dtrace_ptss_page = type { %struct.dtrace_ptss_page* }

@LCK_MTX_ASSERT_OWNED = common dso_local global i32 0, align 4
@LCK_MTX_ASSERT_NOTOWNED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dtrace_ptss_fork(%struct.proc* %0, %struct.proc* %1) #0 {
  %3 = alloca %struct.proc*, align 8
  %4 = alloca %struct.proc*, align 8
  %5 = alloca %struct.dtrace_ptss_page*, align 8
  store %struct.proc* %0, %struct.proc** %3, align 8
  store %struct.proc* %1, %struct.proc** %4, align 8
  %6 = load %struct.proc*, %struct.proc** %3, align 8
  %7 = getelementptr inbounds %struct.proc, %struct.proc* %6, i32 0, i32 2
  %8 = load i32, i32* @LCK_MTX_ASSERT_OWNED, align 4
  %9 = call i32 @LCK_MTX_ASSERT(i32* %7, i32 %8)
  %10 = load %struct.proc*, %struct.proc** %3, align 8
  %11 = getelementptr inbounds %struct.proc, %struct.proc* %10, i32 0, i32 1
  %12 = load i32, i32* @LCK_MTX_ASSERT_NOTOWNED, align 4
  %13 = call i32 @LCK_MTX_ASSERT(i32* %11, i32 %12)
  %14 = load %struct.proc*, %struct.proc** %4, align 8
  %15 = getelementptr inbounds %struct.proc, %struct.proc* %14, i32 0, i32 2
  %16 = load i32, i32* @LCK_MTX_ASSERT_OWNED, align 4
  %17 = call i32 @LCK_MTX_ASSERT(i32* %15, i32 %16)
  %18 = load %struct.proc*, %struct.proc** %4, align 8
  %19 = getelementptr inbounds %struct.proc, %struct.proc* %18, i32 0, i32 1
  %20 = load i32, i32* @LCK_MTX_ASSERT_NOTOWNED, align 4
  %21 = call i32 @LCK_MTX_ASSERT(i32* %19, i32 %20)
  %22 = load %struct.proc*, %struct.proc** %3, align 8
  %23 = getelementptr inbounds %struct.proc, %struct.proc* %22, i32 0, i32 0
  %24 = load %struct.dtrace_ptss_page*, %struct.dtrace_ptss_page** %23, align 8
  store %struct.dtrace_ptss_page* %24, %struct.dtrace_ptss_page** %5, align 8
  br label %25

25:                                               ; preds = %28, %2
  %26 = load %struct.dtrace_ptss_page*, %struct.dtrace_ptss_page** %5, align 8
  %27 = icmp ne %struct.dtrace_ptss_page* %26, null
  br i1 %27, label %28, label %35

28:                                               ; preds = %25
  %29 = load %struct.proc*, %struct.proc** %4, align 8
  %30 = load %struct.dtrace_ptss_page*, %struct.dtrace_ptss_page** %5, align 8
  %31 = call i32 @dtrace_ptss_free_page(%struct.proc* %29, %struct.dtrace_ptss_page* %30)
  %32 = load %struct.dtrace_ptss_page*, %struct.dtrace_ptss_page** %5, align 8
  %33 = getelementptr inbounds %struct.dtrace_ptss_page, %struct.dtrace_ptss_page* %32, i32 0, i32 0
  %34 = load %struct.dtrace_ptss_page*, %struct.dtrace_ptss_page** %33, align 8
  store %struct.dtrace_ptss_page* %34, %struct.dtrace_ptss_page** %5, align 8
  br label %25

35:                                               ; preds = %25
  ret void
}

declare dso_local i32 @LCK_MTX_ASSERT(i32*, i32) #1

declare dso_local i32 @dtrace_ptss_free_page(%struct.proc*, %struct.dtrace_ptss_page*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
